--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,7 @@
       #FFE44D 3deg 6deg
     );
     background-size: 100% 100%;
+    background-attachment: fixed;
   }
   
   /* Custom scrollbar styling */
